[package]
name = "digest-utils"
version = "0.1.0"
edition = "2024"
description = "Ergonomic helpers for common hash functions (MD5, SHA-1, SHA-2), Commons-Codec style but Rust-flavoured."
license = "MIT OR Apache-2.0"
repository = "https://github.com/richardstephens/digest-utils-rs"

[dependencies]
digest = "0.11"
md-5 = "0.11"
sha1 = "0.11"
sha2 = "0.11"
hex = "0.4"
